k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-management-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-management-api
  template:
    metadata:
      labels:
        app: task-management-api
    spec:
      spec:
      containers:
        - name: task-api
          image: <ECR_REGISTRY>/<ECR_REPOSITORY>:<IMAGE_TAG>
          ports:
            - containerPort: 8080
