k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-management-api
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: task-management-api
